# velocorner.com

./: .git-blame-ignore-revs  .gitignore  .scala-steward.conf  .scalafmt.conf  .travis.yml  DECOUPLING_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  README.md  build.gradle.kts  build.sbt  build.sc  deploy.sh  gradle.properties  managedSrcFmt.sbt  release.sh  requirements.txt  scalafmtGenerated.sbt  test.py  version.sbt
.circleci/: Dockerfile  README.md  cachekey.sh  config.yml
.run/: Monte Carlo π Approximation.run.xml  PredictSparkApp.run.xml  SparkSql.run.xml  TopNWord.run.xml  WordCount.run.xml  crawler-service.run.xml  weather-service.run.xml  web-app.run.xml
camera/: filter.py
crawler-service/: README.md
crawler-service-go/: Makefile  README.md  go.sum
data-analytics/: analyze.py  requirements.txt
data-crawler/: README.md  go.mod  go.sum  swagger.sh
data-crawler-go/: go.mod
data-search/: README.md
data-search-elastic/: README.md
demo-service/: README.md
detecting/: detecting.py
doc/: gateway.md  mill.md  notes.sql  notes.txt  products.md  setup.md  setup.txt  todo.md  todo.txt
exchange-rate-service/: Cargo.toml  Dockerfile  README.md  deploy.sh
exchange-rate-service/.run/: Run exchange-rate-service.run.xml
exchange-rate-service/src/: main.rs
exchange-rate-service/src/main/scala/velocorner/exchangerate/: Main.scala
exchange-rate-service/src/test/resources/: exchangeratehost.json
exchange-rate-service/src/test/scala/velocorner/exchangerate/manual/: ExchangeRateApp.scala
opencv/: README.md
project/: CommonDependencies.scala  Dependencies.scala  FrontendRunHook.scala  ManagedCodeFormatterPlugin.scala  ScalafmtExtensionPlugin.scala  WelcomeBanner.scala  build.properties  build.scala  (+1 more)
(+920 files in other folders)
